// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`components/ui/ToolBar > should allow user to Add Network when connected to a different chain 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
      >
        <div
          class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
        >
          <button
            class="aw-flex disabled:aw-cursor-not-allowed"
            title="Add the ApeChain Network to your wallet"
          >
            Add Network
          </button>
          <a
            href="https://terms.apeportal.xyz"
            target="_blank"
          >
            Terms
          </a>
          <a
            class="aw-animate-in aw-zoom-in"
            href="https://www.decentscan.xyz/?address=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
            target="_blank"
          >
            Transactions
          </a>
          <a
            href="https://help.apeportal.xyz"
            target="_blank"
          >
            Support
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
    >
      <div
        class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
      >
        <button
          class="aw-flex disabled:aw-cursor-not-allowed"
          title="Add the ApeChain Network to your wallet"
        >
          Add Network
        </button>
        <a
          href="https://terms.apeportal.xyz"
          target="_blank"
        >
          Terms
        </a>
        <a
          class="aw-animate-in aw-zoom-in"
          href="https://www.decentscan.xyz/?address=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
          target="_blank"
        >
          Transactions
        </a>
        <a
          href="https://help.apeportal.xyz"
          target="_blank"
        >
          Support
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/ui/ToolBar > should not allow user to Add Network when connected to ApeChain 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
      >
        <div
          class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
        >
          <button
            class="aw-flex disabled:aw-cursor-not-allowed"
            disabled=""
            title="You are connected to ApeChain"
          >
            Add Network
          </button>
          <a
            href="https://terms.apeportal.xyz"
            target="_blank"
          >
            Terms
          </a>
          <a
            class="aw-animate-in aw-zoom-in"
            href="https://www.decentscan.xyz/?address=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
            target="_blank"
          >
            Transactions
          </a>
          <a
            href="https://help.apeportal.xyz"
            target="_blank"
          >
            Support
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
    >
      <div
        class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
      >
        <button
          class="aw-flex disabled:aw-cursor-not-allowed"
          disabled=""
          title="You are connected to ApeChain"
        >
          Add Network
        </button>
        <a
          href="https://terms.apeportal.xyz"
          target="_blank"
        >
          Terms
        </a>
        <a
          class="aw-animate-in aw-zoom-in"
          href="https://www.decentscan.xyz/?address=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
          target="_blank"
        >
          Transactions
        </a>
        <a
          href="https://help.apeportal.xyz"
          target="_blank"
        >
          Support
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/ui/ToolBar > should render toolbar with connected wallet 1`] = `
{
  "asFragment": [Function],
  "baseElement": <body>
    <div>
      <div
        class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
      >
        <div
          class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
        >
          <button
            class="aw-flex disabled:aw-cursor-not-allowed"
            title="Add the ApeChain Network to your wallet"
          >
            Add Network
          </button>
          <a
            href="https://terms.apeportal.xyz"
            target="_blank"
          >
            Terms
          </a>
          <a
            class="aw-animate-in aw-zoom-in"
            href="https://www.decentscan.xyz/?address=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
            target="_blank"
          >
            Transactions
          </a>
          <a
            href="https://help.apeportal.xyz"
            target="_blank"
          >
            Support
          </a>
        </div>
      </div>
    </div>
  </body>,
  "container": <div>
    <div
      class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
    >
      <div
        class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
      >
        <button
          class="aw-flex disabled:aw-cursor-not-allowed"
          title="Add the ApeChain Network to your wallet"
        >
          Add Network
        </button>
        <a
          href="https://terms.apeportal.xyz"
          target="_blank"
        >
          Terms
        </a>
        <a
          class="aw-animate-in aw-zoom-in"
          href="https://www.decentscan.xyz/?address=0xf39Fd6e51aad88F6F4ce6aB8827279cffFb92266"
          target="_blank"
        >
          Transactions
        </a>
        <a
          href="https://help.apeportal.xyz"
          target="_blank"
        >
          Support
        </a>
      </div>
    </div>
  </div>,
  "debug": [Function],
  "findAllByAltText": [Function],
  "findAllByDisplayValue": [Function],
  "findAllByLabelText": [Function],
  "findAllByPlaceholderText": [Function],
  "findAllByRole": [Function],
  "findAllByTestId": [Function],
  "findAllByText": [Function],
  "findAllByTitle": [Function],
  "findByAltText": [Function],
  "findByDisplayValue": [Function],
  "findByLabelText": [Function],
  "findByPlaceholderText": [Function],
  "findByRole": [Function],
  "findByTestId": [Function],
  "findByText": [Function],
  "findByTitle": [Function],
  "getAllByAltText": [Function],
  "getAllByDisplayValue": [Function],
  "getAllByLabelText": [Function],
  "getAllByPlaceholderText": [Function],
  "getAllByRole": [Function],
  "getAllByTestId": [Function],
  "getAllByText": [Function],
  "getAllByTitle": [Function],
  "getByAltText": [Function],
  "getByDisplayValue": [Function],
  "getByLabelText": [Function],
  "getByPlaceholderText": [Function],
  "getByRole": [Function],
  "getByTestId": [Function],
  "getByText": [Function],
  "getByTitle": [Function],
  "queryAllByAltText": [Function],
  "queryAllByDisplayValue": [Function],
  "queryAllByLabelText": [Function],
  "queryAllByPlaceholderText": [Function],
  "queryAllByRole": [Function],
  "queryAllByTestId": [Function],
  "queryAllByText": [Function],
  "queryAllByTitle": [Function],
  "queryByAltText": [Function],
  "queryByDisplayValue": [Function],
  "queryByLabelText": [Function],
  "queryByPlaceholderText": [Function],
  "queryByRole": [Function],
  "queryByTestId": [Function],
  "queryByText": [Function],
  "queryByTitle": [Function],
  "rerender": [Function],
  "unmount": [Function],
}
`;

exports[`components/ui/ToolBar > should render toolbar with default values 1`] = `
<div>
  <div
    class="aw-mt-1 aw-flex aw-h-6 aw-w-full aw-flex-row aw-justify-center"
  >
    <div
      class="aw-flex aw-flex-row aw-gap-x-8 aw-text-center aw-font-dmmono aw-text-xs aw-font-medium aw-leading-[14px] aw-text-white aw-underline aw-opacity-50"
    >
      <button
        class="aw-flex disabled:aw-cursor-not-allowed"
        title="Add the ApeChain Network to your wallet"
      >
        Add Network
      </button>
      <a
        href="https://terms.apeportal.xyz"
        target="_blank"
      >
        Terms
      </a>
      <a
        href="https://help.apeportal.xyz"
        target="_blank"
      >
        Support
      </a>
    </div>
  </div>
</div>
`;
